--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "@koa/cors": "^2.2.1",
     "bluebird": "^3.5.0",
     "chalk": "^2.3.0",
     "http-proxy": "^1.16.2",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
-    "koa-cors": "0.0.16",
     "koa-json": "^2.0.2",
     "koa-router": "^7.2.1",
     "koa-static-server": "^1.3.2",
